--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
+  - 2.3.4
 services:
   - mongodb
   - redis
@@ -11,3 +12,4 @@ cache: bundler
 gemfile:
   - Gemfile
   - Gemfile-rails4
+  - Gemfile-rails5
